--- a/app/src/main/res/layout/fragment_notes_display.xml
+++ b/app/src/main/res/layout/fragment_notes_display.xml
@@ -2,12 +2,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.NotesDisplayFragment">
+    tools:context=".NotesDisplayFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:textSize="52dp"
         android:text="@string/hello_blank_fragment" />
 
 </FrameLayout>
