writeNotesViewModel and writeNotesViewModelFactory is created and added with the writeNotesFragment

--- a/app/src/main/res/layout/fragment_notes_display.xml
+++ b/app/src/main/res/layout/fragment_notes_display.xml
@@ -5,10 +5,18 @@
     tools:context=".NotesDisplayFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:textSize="52dp"
-        android:text="@string/hello_blank_fragment" />
 
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:id="@+id/recyclerViewNotesDisplay"
+            android:layout_height="wrap_content"
+        />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_gravity="bottom|right"
+        android:id="@+id/add_action_button"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        />
 </FrameLayout>
