--- a/app/src/main/res/layout/notes_view.xml
+++ b/app/src/main/res/layout/notes_view.xml
@@ -1,8 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:padding="10dp"
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/textView"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="300dp"
+        android:textSize="20dp"
+        android:layout_height="match_parent"
         android:text="TextView" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="108dp"
+        android:layout_height="36dp"
+        android:layout_weight="1"
+        app:srcCompat="@drawable/ic_outline_delete_forever_24" />
+
+</LinearLayout>
