--- a/app/src/main/res/layout/notes_view.xml
+++ b/app/src/main/res/layout/notes_view.xml
@@ -3,7 +3,9 @@
     android:layout_width="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:padding="10dp"
-    android:layout_height="wrap_content">
+    android:layout_margin="15dp"
+    android:layout_height="wrap_content"
+    android:background="@color/notesView">
 
     <TextView
         android:id="@+id/textView"
