--- a/app/src/main/res/layout/fragment_notes_display.xml
+++ b/app/src/main/res/layout/fragment_notes_display.xml
@@ -1,4 +1,5 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -18,5 +19,6 @@
         android:id="@+id/add_action_button"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
+        app:srcCompat="@drawable/ic_sharp_add_24"
         />
 </FrameLayout>
