--- a/app/src/main/res/layout/fragment_write_notes.xml
+++ b/app/src/main/res/layout/fragment_write_notes.xml
@@ -5,12 +5,26 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".WriteNotesFragment">
-
-    <EditText
-        android:id="@+id/writeText"
-        android:layout_width="match_parent"
+    <LinearLayout
         android:layout_height="wrap_content"
-        android:text="" />
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        >
+
+        <EditText
+            android:id="@+id/writeTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="textPersonName" />
+        <EditText
+            android:id="@+id/writeText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="" />
+
+    </LinearLayout>
+
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:layout_height="wrap_content"
@@ -19,4 +33,5 @@
         android:layout_gravity="right|bottom"
         app:srcCompat="@drawable/ic_baseline_save_24"
         />
+
 </FrameLayout>
